@@ -18,6 +18,14 @@ TARGET_OS: $(__CURRENT_OS__)
 TARGET_OS_SECOND_NAME: $(__CURRENT_OS_SECOND_NAME__)
 TARGET_OS_NAMES: $(__CURRENT_OS_NAMES__)
 
+Win_ALL_OS_NAMES:
+    - Win
+    - Win32
+    - Win64
+
+Mac_ALL_OS_NAMES:
+    - Mac
+
 BASE_REPO_REV: 1
 LAST_PROGRESS: 0
 
