@@ -4,6 +4,7 @@ from __future__ import print_function
 import fnmatch
 import yaml
 from pyinstl.utils import *
+from configVarList import var_list
 
 class HelpItem(object):
     def __init__(self, topic, name):
