@@ -5,6 +5,7 @@ import os
 import urllib
 import datetime
 from pyinstl.utils import *
+from configVarList import var_list
 
 from platformSpecificHelper_Base import PlatformSpecificHelperBase
 from platformSpecificHelper_Base import CopyToolRsync
